<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sky_pic"
    tools:context=".fragments.WeatherMainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutCentral_main_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/recycler_view_main_fragment_recent_days"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_main_fragment_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:textColor="@color/white"
            android:textSize="100sp"
            app:layout_constraintBottom_toTopOf="@+id/textView_main_fragment_state"
            app:layout_constraintEnd_toStartOf="@id/textView_main_fragment_temperature"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/textView_main_fragment_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/textView_main_fragment_state"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/temperature"
            android:textColor="@color/white"
            android:textSize="100sp"/>

        <TextView
            android:id="@+id/textView_main_fragment_celsius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/celsius"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textView_main_fragment_temperature"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_main_fragment_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/linearLayout_main_fragment_index_of_air_quality"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_main_fragment_temperature"
            android:text="@string/state"
            android:textColor="@color/white"
            android:textSize="24sp"/>


        <LinearLayout
            android:id="@+id/linearLayout_main_fragment_index_of_air_quality"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/round_layout"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_main_fragment_state"
            >

            <ImageView
                android:id="@+id/imageView_main_fragment_air_quality"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_sun"
                android:contentDescription="@string/sun" />

            <TextView
                android:id="@+id/textView_main_fragment_index_of_air_quality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ikv41"
                android:textColor="@color/white"
                android:layout_margin="5dp"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_main_fragment_recent_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp"
        />

    <LinearLayout
        android:id="@+id/linearLayout_main_fragment_more_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/recycler_view_main_fragment_recent_days"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textView_main_fragment_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="12sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:src="@drawable/ic_arrow" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>